@@ -22,6 +22,27 @@
 #include "log.h"
 #include "logfiles.h"
 
+/******************************************************************************
+ *                                                                            *
+ * Function: process_log                                                      *
+ *                                                                            *
+ * Purpose: Get message from logfile                                          *
+ *                                                                            *
+ * Parameters: filename - logfile name                                        *
+ *             lastlogsize - offset for message                               *
+ *             value - pointer for logged message                             *
+ *                                                                            *
+ * Return value: returns SUCCEED on succesfull reading,                       *
+ *               FAIL on other cases                                          *
+ *                                                                            *
+ * Author: Eugene Grigorjev                                                   *
+ *                                                                            *
+ * Comments:                                                                  *
+ *    This function allocate memory for 'value', because use zbx_free.        *
+ *    Return SUCCEED and NULL value if end of file received.                  *
+ *                                                                            *
+ *                                                                            *
+ ******************************************************************************/
 int   process_log(
 	char *filename,
 	long *lastlogsize,
@@ -30,6 +51,7 @@ int   process_log(
 {
 	FILE	*f = NULL;
 	struct stat	buf;
+	int	ret = FAIL;
 
 	assert(filename);
 	assert(lastlogsize);
@@ -38,47 +60,47 @@ int   process_log(
 	zabbix_log( LOG_LEVEL_DEBUG, "In process log (%s,%li)", filename, *lastlogsize);
 
 	/* Handling of file shrinking */
-	if(stat(filename,&buf) == 0)
+	if( 0 != stat(filename,&buf) )
+	{
+		zabbix_log( LOG_LEVEL_WARNING, "Cannot open [%s] [%s]", filename, strerror(errno));
+	}
+	else
 	{
 		if(buf.st_size<*lastlogsize)
 		{
 			*lastlogsize=0;
 		}
+
+		if(NULL == (f = fopen(filename,"r") ))
+		{
+			zabbix_log( LOG_LEVEL_WARNING, "Cannot open [%s] [%s]", filename, strerror(errno));
+		}
+		else
+		{
+			if(-1 == fseek(f,*lastlogsize,SEEK_SET))
+			{
+				zabbix_log( LOG_LEVEL_WARNING, "Cannot set postition to [%li] for [%s] [%s]", *lastlogsize, filename, strerror(errno));
+			}
+			else
+			{
+				*value = zbx_malloc(*value, MAX_BUF_LEN);
+				memset(*value, 0, MAX_BUF_LEN);
+
+				if(NULL == fgets(*value, MAX_BUF_LEN-1, f))
+				{
+					/* EOF */
+					zbx_free(*value);
+				}
+				else
+				{
+					*lastlogsize += (long)strlen(*value);
+				}
+
+				ret = SUCCEED;
+			}
+			zbx_fclose(f);
+		}
 	}
-	else
-	{
-		zabbix_log( LOG_LEVEL_WARNING, "Cannot open [%s] [%s]", filename, strerror(errno));
-		*value = strdup("ZBX_NOTSUPPORTED\n");
-		return 1;
-	}
 
-	if(NULL == (f = fopen(filename,"r") ))
-	{
-		zabbix_log( LOG_LEVEL_WARNING, "Cannot open [%s] [%s]", filename, strerror(errno));
-		*value = strdup("ZBX_NOTSUPPORTED\n");
-		return 1;
-	}
-
-	if(-1 == fseek(f,*lastlogsize,SEEK_SET))
-	{
-		zabbix_log( LOG_LEVEL_WARNING, "Cannot set postition to [%li] for [%s] [%s]", *lastlogsize, filename, strerror(errno));
-		*value = strdup("ZBX_NOTSUPPORTED\n");
-		zbx_fclose(f);
-		return 1;
-	}
-
-	*value = zbx_malloc(*value, MAX_BUF_LEN);
-	memset(*value, 0, MAX_BUF_LEN);
-
-	if(NULL == fgets(*value, MAX_BUF_LEN-1, f))
-	{
-		/* EOF */
-		zbx_fclose(f);
-		return 1;
-	}
-	zbx_fclose(f);
-
-	*lastlogsize += (long)strlen(*value);
-
-	return 0;
+	return ret;
 }
