@@ -1,5 +1,6 @@
 Changes for 1.4.1:
 
+ - fixed and improved log monitoring (Eugene)
  - fixed type of items.valuemapid (Alexei)
  - improved Standalone_Template (Alexei)
  - fixed PostgreSQL upgrade patch (Alexei)
